--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,6 +16,10 @@
         android:id="@+id/account"
         />
     <item
+        android:title="Sensor"
+        android:id="@+id/sensor"
+        />
+    <item
         android:title="Settings"
         android:id="@+id/settings"
         />
