--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -23,4 +23,8 @@
         android:title="Settings"
         android:id="@+id/settings"
         />
+    <item
+        android:title="Camera"
+        android:id="@+id/camera"
+        />
 </menu>
